# lab_classess

./: CMakeLists.txt
01_task/: CMakeLists.txt  logger.cpp  logger.h  main.cpp
02_task/: CMakeLists.txt  README.md  main.cpp  tracked_string.cpp
03_task/: CMakeLists.txt  README.md  main.cpp  tracked_string.h  wrapper.cpp  wrapper.h
04_task/: CMakeLists.txt  README.md  main.cpp  tracked_string.cpp
05_task/: CMakeLists.txt  README.md  main.cpp  tracked_string.cpp  tracked_string.h
06_task/: CMakeLists.txt  README.md  main.cpp  tracked_string.cpp  tracked_string.h
